# DobbyAndroid

./: README.md
android/: gradle.properties
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/Dobby/: CMakeLists.txt
android/app/src/main/cpp/Example/: CMakeLists.txt  test.cpp
android/app/src/main/java/test10/def/abc/dobbyandroid/: MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
